testsuite/tests/module/mod51.stderr

mod51.hs:3:22: error: [GHC-59692]
    Duplicate instance declarations:
      instance Eq T -- Defined at mod51.hs:3:22
      instance Eq T -- Defined at mod51.hs:3:25
