testsuite/tests/module/mod51.hs
-- !!! Duplicate derived instance
module M where
data T = C deriving (Eq,Eq)